--- a/src/views/emailVerification.handlebars
+++ b/src/views/emailVerification.handlebars
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="https://avatars.githubusercontent.com/u/19819005?v=4" alt="" />
+      <img src="https://twemoji.maxcdn.com/v/latest/72x72/1f35f.png" alt="" />
       <h2 class="color-primary">{{subject}}</h2>
       <hr />
       <p>Hello
@@ -31,7 +31,7 @@
 
       <hr />
       <p>Regards,</p>
-      <p><b>Salma</b> Team</p>
+      <p><b>Salma's</b> Team</p>
       <div>
         <p style="font-size: 0.8rem;">
           If you’re having trouble clicking the "Verify Account" button, copy
