--- a/src/views/forgotPassword.handlebars
+++ b/src/views/forgotPassword.handlebars
@@ -13,12 +13,12 @@
   </head>
   <body>
     <div class="container">
-      <img src="https://avatars.githubusercontent.com/u/19819005?v=4" alt="" />
+      <img src="https://twemoji.maxcdn.com/v/latest/72x72/1f35f.png" alt="" />
 
       <h1>{{subject}}</h1>
       <hr />
       <p>Hello {{name}},</p>
-      <p>We received a request to reset your AuthKit password.<br />If you did
+      <p>We received a request to reset your password.<br />If you did
         not initiate this, please reset your password immediately.</p>
 
       <a href={{link}} class="btn-link">Reset Password</a>
@@ -34,7 +34,7 @@
 
       <hr />
       <p>Regards,</p>
-      <p><b>Salma</b> Team</p>
+      <p><b>Salma's</b> Team</p>
       <div>
         <p style="font-size: 0.8rem;">
           If you’re having trouble clicking the "Reset Password" button, copy
